more paginator scrollbar issues

--- a/hoops.ui/src/admin/shared/generic-mat-table/generic-mat-table.scss
+++ b/hoops.ui/src/admin/shared/generic-mat-table/generic-mat-table.scss
@@ -6,17 +6,16 @@
 }
 
 :host {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  min-height: 0;
+  display: block;
+  width: 100%;
 }
 
 .table-container {
   display: flex;
   flex-direction: column;
-  height: 100%;
-  min-height: 0;
+  height: calc(100vh - 320px);
+  max-height: 100%;
+  min-height: 260px;
   overflow: hidden;
 
   .table-scroll {
@@ -28,6 +27,8 @@
 
   mat-paginator {
     flex-shrink: 0;
+    min-height: 56px;
     background: white;
+    border-top: 1px solid rgba(255, 255, 255, 0.12);
   }
 }
